--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Fracciones Plus Pro</title>
     
-    <link rel="manifest" href="data:application/manifest+json,{%22name%22:%22Fracciones%20Plus%22,%22short_name%22:%22Fracciones%22,%22start_url%22:%22.%22,%22display%22:%22standalone%22,%22background_color%22:%22#1a1a1a%22,%22theme_color%22:%22#bdc3c7%22,%22icons%22:[{%22src%22:%22icono.png%22,%22sizes%22:%22512x512%22,%22type%22:%22image/png%22,%22purpose%22:%22any%20maskable%22}]}">
-
-    <link rel="icon" type="image/png" href="icono.png">
-    <link rel="apple-touch-icon" href="icono.png">
+    <link rel="icon" type="image/png" href="icono.png?v=2">
+    <link rel="apple-touch-icon" href="icono.png?v=2">
     
+    <link rel="manifest" href="data:application/manifest+json,{%22name%22:%22Fracciones%20Plus%22,%22short_name%22:%22Fracciones%22,%22start_url%22:%22index.html%22,%22display%22:%22standalone%22,%22background_color%22:%22#1a1a1a%22,%22theme_color%22:%22#bdc3c7%22,%22icons%22:[{%22src%22:%22icono.png%22,%22sizes%22:%22512x512%22,%22type%22:%22image/png%22,%22purpose%22:%22any%20maskable%22}]}">
+
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#bdc3c7">
@@ -104,7 +104,7 @@
 </div>
 
 <script>
-    const APP_VERSION = "2.0";
+    const APP_VERSION = "2.1";
     const clickSound = new Audio("data:audio/wav;base64,UklGRl9vT19XQVZFRm10IBAAAAABAAEAQB8AAEAfAAABAAgAZGF0YTdvT18AZmZmf39/f39/f2ZmZg==");
     function action(fnName, ...args) {
         if ("vibrate" in navigator) navigator.vibrate(20);
